--- a/SADM/Views/BalancesPage.xaml
+++ b/SADM/Views/BalancesPage.xaml
@@ -37,6 +37,7 @@
                                     <RowDefinition Height="15"/>
                                     <RowDefinition Height="20"/>
                                     <RowDefinition Height="11"/>
+                                    <RowDefinition Height="11"/>
                                 </Grid.RowDefinitions>
 
                                 <StackLayout Grid.Row="0" Grid.Column="0" Grid.RowSpan="4">
@@ -142,6 +143,7 @@
                                                              Margin="0"/>
                                 </StackLayout>
                                 
+                                
                                 <BoxView Style="{StaticResource YellowHorizontalSeparatorStyle}"
                                          Grid.Column="0" Grid.Row="4" Grid.ColumnSpan="3"
                                          Margin="0, 10, 0, 0"/>
@@ -176,6 +178,13 @@
                                  VerticalOptions="End"
                                  HorizontalOptions="CenterAndExpand"
                                  Style="{StaticResource PurpleButtonStyle}"/>
+        
+        <controls:ImprovedButton Text="{i18n:Translate DeleteBalanceButton}" 
+                                 Command="{Binding DeleteCommand}"
+                                 IsVisible="{Binding ShowDeleteButton}"
+                                 VerticalOptions="End"
+                                 HorizontalOptions="CenterAndExpand"
+                                 Style="{StaticResource PurpleButtonStyle}"/>        
         <!-- End Content -->
     </StackLayout>
 </views:PageBase>
