--- a/SADM/Views/BalancePage.xaml
+++ b/SADM/Views/BalancePage.xaml
@@ -80,18 +80,32 @@
                                 <Label Text="{Binding MaxBilled}" FontSize="8" WidthRequest="30" VerticalOptions="StartAndExpand" HeightRequest="{Binding MaxBar}" />
                                 <Label Text="0" FontSize="8" WidthRequest="15" VerticalOptions="End"/>
                             </StackLayout>
-                        <Label HeightRequest="{Binding Bar1}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar2}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar3}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar4}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar5}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar6}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar7}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar8}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar9}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar10}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar11}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
-                        <Label HeightRequest="{Binding Bar12}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End"/>
+                            
+                            <!--Label HeightRequest="{Binding Bar1}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value1}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar2}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value2}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar3}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value3}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar4}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value4}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar5}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value5}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar6}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value6}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar7}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value7}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar8}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value8}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar9}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value9}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar10}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value10}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar11}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value11}" FontSize="8"/>
+                            <Label HeightRequest="{Binding Bar12}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" VerticalTextAlignment="Center" HorizontalTextAlignment="Center" TextColor="White" Text="{Binding Value12}" FontSize="8"/-->
+                            
+                            <Label HeightRequest="{Binding Bar1}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar2}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar3}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar4}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar5}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar6}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar7}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar8}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar9}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar10}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar11}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
+                            <Label HeightRequest="{Binding Bar12}" WidthRequest="14" BackgroundColor="{StaticResource BarChartBarColor}" Margin="2,0,0,0" VerticalOptions="End" />
                     </StackLayout>
                    
                     <StackLayout 
