[UPDATE] Correcciones de errores detectadas por el cliente.

--- a/SADM/Views/GenerateReportPage.xaml
+++ b/SADM/Views/GenerateReportPage.xaml
@@ -162,6 +162,7 @@
                     
                     <maps:Map VerticalOptions="FillAndExpand" 
                               HorizontalOptions="FillAndExpand" 
+                              x:Name="map"
                               IsVisible="{Binding TextAddressInput, Converter={StaticResource InverseBoolConverter}}">
                         <maps:Map.Behaviors>
                             <mapsBindings:BindingPinsBehavior Value="{Binding PinList}"/>
